[tool.poetry]
name = "a-voznesensky"
version = "0.1.0"
description = "A_Voznesensky project"
authors = ["DariaTM <dasha-matveeva@yandex.ru>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
